--- a/weather/index.html
+++ b/weather/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='css/bootstrap.min.css'>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
-    <script src="weather_popup.js" type="text/javascript"></script>
+    <script src="popup.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="full" class="container-fluid">
@@ -14,33 +14,31 @@
             <div id="layer" class="container-fluid">
                 <div id="title-row" class="row">
                     <div id="title" class="col text-center">
-                        <span id="cityName" class="city">CITY</span>
-                        <span id="countryName" class="city">COUNTRY</span>
+                        <span id="cityName" class="city">Fetching weather data...</span>
+                        <span id="countryName" class="city"></span>
                     </div>
                 </div>
                 <div id="weather-data" class="row five-split align-items-center">
                     <div class="col">
-                        <div id=weather-data-degrees class="float-right">
-                            10°
-                        </div>
+                        <div id="weather-data-degrees" class="float-right"></div>
                     </div>
                     <div class="col">
                         <div class="row weather-icons"> 
-                            <span class="icon-text">
-                                <img class="icon-image" src="../imgs/rain_white.png" height="15px" width=15px/>
-                                Rain
+                            <span id="sm-weather-icon" class="icon-text">
+                                <!--<img class="icon-image" src="../imgs/rain-white.png" height="15px" width=15px/>
+                                <span id="weather-icon-text" class="icon-text"></span>-->
                             </span>
                         </div>
                         <div class="row weather-icons">
-                            <span class="icon-text">
-                                <img class="icon-image" src="../imgs/wind_white.png" height="15px" width=15px/>
-                                12 mph    
+                            <span id="sm-wind-icon" class="icon-text">
+                                <!--<img class="icon-image" src="../imgs/wind_white.png" height="15px" width=15px/>
+                                <span id="wind-icon-text" class="icon-text"></span>-->
                             </span>                            
                         </div>
                         <div class="row weather-icons">
-                            <span class="icon-text">
-                                <img class="icon-image" src="../imgs/umbrella.png" height="15px" width=15px/>
-                                68 %
+                            <span id="sm-humidity-icon" class="icon-text">
+                                <!--<img class="icon-image" src="../imgs/umbrella.png" height="15px" width=15px/>
+                                <span id="humidity-icon-text" class="icon-text"></span>-->
                             </span>
                         </div>
                     </div>
@@ -49,26 +47,26 @@
                 <div class="row five-split"></div>
                 <div class="row five-split"></div>
             </div>
-            <img src="../imgs/la.jpg" class="cover" />
+            <img id="bg-img" src="../imgs/white-bg.jpg" class="cover" />
         </div>
         <div id="twenty" class="container-fluid">
             <div class="row">    
                 <div class="col"> 
                     <div class="container weather-ext">
                         <div class="row">
-                            <div class="col text-center weather-bottom">
-                                <span class="day">MON</span>
+                            <div id="day-1" class="col text-center weather-bottom">
+                                <span id="name-day-1" class="day"></span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col weather-bottom">
-                                <img class="center-block" src="../imgs/rain_grey.png" height="25px" width=25px/>
+                            <div id="img-day-1" class="col weather-bottom">
+                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
                             </div>
                         </div>
                         <div class="row">
                             <div class="col text-center weather-bottom">
-                                <span class="degrees-small"><b>10</b></span>
-                                <span class="degrees-small">-5</span>
+                                <span id="max-day-1" class="degrees-small-max"></span>
+                                <span id="min-day-1" class="degrees-small-min"></span>
                             </div>
                         </div>
                     </div>
@@ -76,19 +74,19 @@
                 <div class="col"> 
                     <div class="container weather-ext">
                         <div class="row">
-                            <div class="col text-center weather-bottom">
-                                <span class="day">TUE</span>
+                            <div id="day-2" class="col text-center weather-bottom">
+                                <span id="name-day-2" class="day"></span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col weather-bottom">
-                                <img class="center-block" src="../imgs/rain_grey.png" height="25px" width=25px/>
+                            <div id="img-day-2" class="col weather-bottom">
+                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
                             </div>
                         </div>
                         <div class="row">
                             <div class="col text-center weather-bottom">
-                                <span class="degrees-small"><b>10</b></span>
-                                <span class="degrees-small">-5</span>
+                                <span id="max-day-2" class="degrees-small-max"></span>
+                                <span id="min-day-2" class="degrees-small-min"></span>
                             </div>
                         </div>
                     </div>
@@ -96,19 +94,19 @@
                 <div class="col"> 
                     <div class="container weather-ext">
                         <div class="row">
-                            <div class="col text-center weather-bottom">
-                                <span class="day">WED</span>
+                            <div id="day-3" class="col text-center weather-bottom">
+                                <span id="name-day-3" class="day"></span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col weather-bottom">
-                                <img class="center-block" src="../imgs/rain_grey.png" height="25px" width=25px/>
+                            <div id="img-day-3" class="col weather-bottom">
+                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
                             </div>
                         </div>
                         <div class="row">
                             <div class="col text-center weather-bottom">
-                                <span class="degrees-small"><b>10</b></span>
-                                <span class="degrees-small">-5</span>
+                                <span id="max-day-3" class="degrees-small-max"></span>
+                                <span id="min-day-3" class="degrees-small-min"></span>
                             </div>
                         </div>
                     </div>
@@ -116,19 +114,19 @@
                 <div class="col"> 
                     <div class="container weather-ext">
                         <div class="row">
-                            <div class="col text-center weather-bottom">
-                                <span class="day">THU</span>
+                            <div id="day-4" class="col text-center weather-bottom">
+                                <span id="name-day-4" class="day"></span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col weather-bottom">
-                                <img class="center-block" src="../imgs/rain_grey.png" height="25px" width=25px/>
+                            <div id="img-day-4" class="col weather-bottom">
+                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
                             </div>
                         </div>
                         <div class="row">
                             <div class="col text-center weather-bottom">
-                                <span class="degrees-small"><b>10</b></span>
-                                <span class="degrees-small">-5</span>
+                                <span id="max-day-4" class="degrees-small-max"></span>
+                                <span id="min-day-4" class="degrees-small-min"></span>
                             </div>
                         </div>
                     </div>
@@ -136,19 +134,19 @@
                 <div class="col"> 
                     <div class="container weather-ext">
                         <div class="row">
-                            <div class="col text-center weather-bottom">
-                                <span class="day">FRI</span>
+                            <div id="day-5" class="col text-center weather-bottom">
+                                <span id="name-day-5" class="day"></span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col weather-bottom">
-                                <img class="center-block" src="../imgs/rain_grey.png" height="25px" width=25px/>
+                            <div id="img-day-5" class="col weather-bottom">
+                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
                             </div>
                         </div>
                         <div class="row">
                             <div class="col text-center weather-bottom">
-                                <span class="degrees-small"><b>10</b></span>
-                                <span class="degrees-small">-5</span>
+                                <span id="max-day-5" class="degrees-small-max"></span>
+                                <span id="min-day-5" class="degrees-small-min"></span>
                             </div>
                         </div>
                     </div>
