--- a/weather/index.html
+++ b/weather/index.html
@@ -6,7 +6,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' href='css/bootstrap.min.css'>
     <link rel='stylesheet' type='text/css' href='css/style.css'>
-    <script src="popup.js" type="text/javascript"></script>
+    <script src="popup_temp.js" type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl8xuKwal-sSnAXAvGzjlhfG--HT_m57Q&libraries=places&callback=initAutocomplete" async defer></script>
 </head>
 <body>
     <div id="full" class="container-fluid">
@@ -44,7 +45,13 @@
                     </div>
                 </div>
                 <div class="row five-split"></div>
-                <div class="row five-split"></div>
+                <div class="row five-split">
+                    <div class="col">
+                        <input id="autocomplete" class="center-block" placeholder="Enter a place" type="text" />
+                    </div>                    
+                </div>
+                <!--<script src="autocomplete.js" type="text/javascript"></script>-->
+                </script>
                 <div class="row five-split"></div>
             </div>
             <img id="bg-img" src="../imgs/white-bg.jpg" class="cover" />
