chrome ext working

--- a/weather/index.html
+++ b/weather/index.html
@@ -26,20 +26,20 @@
                     <div class="col">
                         <div class="row weather-icons"> 
                             <span id="sm-weather-icon" class="icon-text">
-                                <!--<img class="icon-image" src="../imgs/rain-white.png" height="15px" width=15px/>
-                                <span id="weather-icon-text" class="icon-text"></span>-->
+                                <img id="weather-icon-img" class="icon-image" src="" height="15px" width=15px/>
+                                <span id="weather-icon-text" class="icon-text"></span>
                             </span>
                         </div>
                         <div class="row weather-icons">
                             <span id="sm-wind-icon" class="icon-text">
-                                <!--<img class="icon-image" src="../imgs/wind_white.png" height="15px" width=15px/>
-                                <span id="wind-icon-text" class="icon-text"></span>-->
+                                <img id="wind-icon-img" class="icon-image" src="" height="15px" width=15px/>
+                                <span id="wind-icon-text" class="icon-text"></span>
                             </span>                            
                         </div>
                         <div class="row weather-icons">
                             <span id="sm-humidity-icon" class="icon-text">
-                                <!--<img class="icon-image" src="../imgs/umbrella.png" height="15px" width=15px/>
-                                <span id="humidity-icon-text" class="icon-text"></span>-->
+                                <img id="humidity-icon-img" class="icon-image" src="" height="15px" width=15px/>
+                                <span id="humidity-icon-text" class="icon-text"></span>
                             </span>
                         </div>
                     </div>
@@ -66,8 +66,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div id="img-day-1" class="col weather-bottom">
-                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
+                            <div class="col weather-bottom">
+                                <img id="img-day-1" class="center-block" src="../imgs/null.png" height="25px" width=25px/>
                             </div>
                         </div>
                         <div class="row">
@@ -86,8 +86,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div id="img-day-2" class="col weather-bottom">
-                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
+                            <div class="col weather-bottom">
+                                <img id="img-day-2" class="center-block" src="../imgs/null.png" height="25px" width=25px/>
                             </div>
                         </div>
                         <div class="row">
@@ -106,8 +106,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div id="img-day-3" class="col weather-bottom">
-                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
+                            <div class="col weather-bottom">
+                                <img id="img-day-3" class="center-block" src="../imgs/null.png" height="25px" width=25px/>
                             </div>
                         </div>
                         <div class="row">
@@ -126,8 +126,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div id="img-day-4" class="col weather-bottom">
-                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
+                            <div class="col weather-bottom">
+                                <img id="img-day-4" class="center-block" src="../imgs/null.png" height="25px" width=25px/>
                             </div>
                         </div>
                         <div class="row">
@@ -146,8 +146,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div id="img-day-5" class="col weather-bottom">
-                                <!--<img class="center-block" src="../imgs/rain-grey.png" height="25px" width=25px/>-->
+                            <div class="col weather-bottom">
+                                <img id="img-day-5" class="center-block" src="../imgs/null.png" height="25px" width=25px/>
                             </div>
                         </div>
                         <div class="row">
